refactor: unify move interfaces (#2127)
This PR takes both the old and new `Move` interfaces, and merges them
into one.

In order to not require large changes to the existing generic move
selectors,
it also introduces `AbstractSelectorBasedMove`, a non-public extension
of `Move` which allows to deal with move doability. I am adding the
`SelectoBased` prefix to all such move implementations, to distinguish
them in profiling and stack traces from the Neighborhoods-based
equivalents we either already have or will create.

It also makes large changes to the documentation around moves, and
finally exposes Neighborhoods as a documented preview feature.